-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0
-
None
-
075ae987c48ce732e6a22c1eba71023fa0ea1775, 3f0b8a9f198cd1e0e8ae9150561f93fb1b931b7e
Mapping of windows to screens, and font sizes are wrong for multiple screen setups with different display pixel ratios.
| For Gerrit Dashboard: QTBUG-43713 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 103074,4 | X11 devicePixelRatio screen mapping fix | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 103155,3 | Multi-screen DPI support for X11 | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |