src/plugins/platforms/xcb/qxcbscreen.h
@@ -62,6 +62,7 @@ public:
     QWindow *topLevelAt(const QPoint &point) const;
 
     QRect geometry() const { return m_geometry; }
+    QRect nativeGeometry() const { return m_nativeGeometry; }
     QRect availableGeometry() const {return m_availableGeometry;}
     int depth() const { return m_screen->root_depth; }
     QImage::Format format() const;
@@ -114,6 +115,7 @@ private:
     QSizeF m_outputSizeMillimeters;
     QSizeF m_sizeMillimeters;
     QRect m_geometry;
+    QRect m_nativeGeometry;
     QRect m_availableGeometry;
     QSize m_virtualSize;
     QSizeF m_virtualSizeMillimeters;
